# airloom

./: .gitignore  Makefile  PLAN.md  PROMPT.md  README.md  pyproject.toml
cfd/: calibration.md  manifest.json
config/: evolution.yaml  platform.yaml  scenarios.yaml
data/source_one/: README.md
docs/: designer_log.md  glossary.html  index.html  leaderboard.md  lineage.dot  lineage.html  viewer.js
inspirations/: README.md  buckminster-fuller.md  freakonomics.md  frogs.md  gaudi.md  picasso.md  rem-koolhaas.md  von-neumann.md  zen.md
results/: gallery.html  gen_0000_best.stl  gen_0001_best.stl  gen_0002_best.stl  leaderboard.md  lineage.dot  run.db
scripts/: fetch_uiuc.py
src/airloom/: cfd.py  champion.py  cli.py  components.py  dbstore.py  designer.py  dryden.py  evaluate.py  flythrough.py  frame_gen.py  gallery.py  landing.py  lineage.py  loop.py  meshutil.py  narrator.py  parallel.py  realgeo.py  render.py  rotor_model.py  simulator.py  structures.py
src/framevo/: aero.py  cfd.py  champion.py  claude_cli.py  cli.py  components.py  config.py  dbstore.py  designer.py  evaluate.py  evolution.py  frame_gen.py  gallery.py  genome.py  lineage.py  loop.py  narrator.py  parallel.py  realgeo.py  (+4 more)
src/framevo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_battery.py  test_calibration.py  test_cfd.py  test_champion.py  test_components.py  test_designer.py  test_dryden.py  test_energy.py  test_flythrough.py  test_frame_gen.py  test_materials.py  test_narrator.py  test_patience.py  test_robustness.py  test_rotor_model.py  test_sanity_anchor.py  test_structures.py
(+1146 files in other folders)
