[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airloom"
version = "0.1.0"
description = "Evolutionary optimization of quadcopter frame geometry for Wh/km across adverse-weather scenarios"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "trimesh>=4.0",
    "manifold3d>=2.5",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "shapely>=2.0",
    "mapbox_earcut>=1.0",
    "ezdxf>=1.1",
    "fast-simplification>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
airloom = "airloom.cli:main"
framevo = "airloom.cli:main"  # legacy alias (pre-rename muscle memory)

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
